Crear contador en navegador

--- a/Views/Home/Creditos.cshtml
+++ b/Views/Home/Creditos.cshtml
@@ -9,7 +9,7 @@
     <ul class="expandido">
         <li>Tomás "Korgol" Korngold</li>
         <li>David Chinski</li>
-        <li>Lucas Tjor</li>
+        <li><a href="https://github.com/tjor75">Lucas Tjor</a></li>
     </ul>
 
 </div>
