--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -36,8 +36,7 @@ img {
   width: 100%;
   border: solid 5px #361d09;
 }
-div { padding: 0 15%; }
-div div { padding: 0%; }
+main { padding: 0 15%; }
 p { margin: 6px 0; }
 
 
@@ -109,7 +108,25 @@ ul {
   width: 100%;
 }
 .expandido li {
-  width:33.33%;
+  width: 33.33%;
+}
+
+
+form {
+  width: 48.5%;
+  margin-right: 1%;
+  float: left;
+}
+input[type="text"] {
+  width: 80%;
+}
+input[type="submit"] {
+  width: 10%;
+}
+#contador {
+  font-size: 24px;
+  width: 48.5%;
+  float: left;
 }
 
 
@@ -244,7 +261,16 @@ ul {
 footer {
   background-color: #361d09;
   padding: 5px;
+  clear: both;
 }
 footer p {
   margin: 6px 0;
+}
+
+
+@media only screen and (max-width: 600px) {
+  form, #contador {
+    margin-left: 0%;
+    width: 100%;
+  }  
 }
