--- a/Views/Home/Tutorial.cshtml
+++ b/Views/Home/Tutorial.cshtml
@@ -3,12 +3,13 @@
 }
 
 <div class="centrado">
-    <h1>Presta atencion al siguiente Tutorial</h1>
+    <h1>Presta atencion al siguiente tutorial</h1>
     <ol>
         <li>Para comenzar entra en el botón de arriba donde dice comenzar, para dirigirte a la sala comienzo.</li>
         <li>Pasa de sala en sala hasta llegar al final. Siempre abajo de cada página tenes una casilla para colocar la respuesta que creas que es correcta. En el caso de que sea incorrecta no va  a pasar a la siguiente. Caso contrario, si es correcta, va a pasar de sala.</li>
         <li>Todas las salas tienen pistas complejas, si buscas encuentras y todas tienen alguna respuesta.</li>
         <li>Esperemos que les guste la sala y empezemos a jugar.</li>
+        <li>Tenés 1:30h para completar la sala. ¡Buena suerte!</li>
     </ol>
     <img src="~/img/tutorial.png" alt="Imagen de tutorial">
 </div>
