--- a/Views/Home/Creditos.cshtml
+++ b/Views/Home/Creditos.cshtml
@@ -1,15 +1,14 @@
 @{
-    ViewData["Title"] = "Creditos";
+    ViewData["Title"] = "Créditos";
 }
 
 <div class="centrado">
-    <h1>Creditos</h1>
+    <h1>Créditos</h1>
     
     <img src="~/img/Creditos.jpeg">
     <ul class="expandido">
         <li>Tomás "Korgol" Korngold</li>
-        <li>David Chinski</li>
+        <li><a href="https://github.com/DavidChinski">David Chinski</a></li>
         <li><a href="https://github.com/tjor75">Lucas Tjor</a></li>
     </ul>
-
 </div>
