Normalizar nombres de archivos y eliminar innecesarios

--- a/Views/Home/Creditos.cshtml
+++ b/Views/Home/Creditos.cshtml
@@ -5,7 +5,7 @@
 <div class="centrado">
     <h1>Créditos</h1>
     
-    <img src="~/img/Creditos.jpeg">
+    <img src="~/img/creditos.jpeg">
     <ul class="expandido">
         <li>Tomás "Korgol" Korngold</li>
         <li><a href="https://github.com/DavidChinski">David Chinski</a></li>
