--- a/Views/Home/Derrota.cshtml
+++ b/Views/Home/Derrota.cshtml
@@ -5,5 +5,5 @@
 <div class="centrado">
     <h1>Game Over</h1>
     <p>Te quedaste sin tiempo. Solo esperás lo mejor.</p>
-    <img src="~/img/Derrota.png" alt="Game Over">
+    <img src="~/img/derrota.png" alt="Game Over">
 </div>
