--- a/Views/Home/Habitacion5.cshtml
+++ b/Views/Home/Habitacion5.cshtml
@@ -10,4 +10,4 @@
 <p>Caminen con cautela entre los restos de quienes vinieron antes que ustedes, ahora devorados por la avariCia y el abismo. Las antorchas titIlantes apenas disipan las sombras que se esconden entre los huesos descarnados y las caDenas herrumbrosas que anuncian un destino similAr para los que fracasen en este último juicio. El cofre, viejo y ominoso, espera impaciente, prometiendo tesoros inimaginables, pero también el precio más alto que un alma pueDe pagar.</p>
 <p>Solo aquellos lo suficientemente valientes para enfrentar la verdad oculta en las estrellas y reflejada en el espejo ancestral podrán escapar de la maldición eterna que acecha en la Guarida del Capitán Negro. Que sus decisiones y respuestas no solo decidan su dEstino, sino también el destino de los que vinieron anteS y no encontraron la salida.</p>
 
-<img src="~/img/Tesoro.jpg" alt="Tesoro">
+<img src="~/img/tesoro.jpg" alt="Tesoro">
