--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -86,7 +86,7 @@ h1 {
 
 
 #index {
-  background: url("/img/Index.gif");
+  background: url("/img/index.gif");
   background-position: center;
   background-size: cover;
   text-align: center;
