--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -12,7 +12,7 @@
     <div>
         <img src="~/img/index-screenshot1.jpg" alt="Screenshot 1">
         <img src="~/img/index-screenshot2.jpg" alt="Screenshot 2">
-        <img src="~/img/Tesoro.jpg" alt="Screenshot 3">
+        <img src="~/img/tesoro.jpg" alt="Screenshot 3">
     </div>
 </div>
 
