Normalizar y clarificar texto, y desafios

--- a/Views/Home/Habitacion4.cshtml
+++ b/Views/Home/Habitacion4.cshtml
@@ -5,9 +5,9 @@
 }
 
 <h1>Sótano</h1>
-<p>¡Ahoy, valientes aventureros! Han llegado al oscuro y misterioso sótano del galeón pirata. Aquí se esconde el tesoro más grande, protegido por ingeniosos acertijos y trampas.</p>
+<p>¡Ahoy, valiente aventurero! Has llegado al oscuro y misterioso sótano del galeón. Aquí se esconde el tesoro más grande, protegido por ingeniosos acertijos y trampas.</p>
 <p>Solo los más astutos podrán escapar con el botín.</p>
-<p>Pista: Las dos espadas cruzadas no es la letra B, fijate un icono que sea parecido.</p>
+<p>Nota: Las dos espadas cruzadas no es la letra B, fijate un icono que sea parecido.</p>
 
 <div class="imagenInteractiva">
     <img src="~/img/h4-sotano.jpg" alt="Sótano">
