--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,9 +1,9 @@
 ﻿@{
-    ViewData["Title"] = "Bienvenidos/as";
+    ViewData["Title"] = "Bienvenido/a";
 }
 
 <div id="index">
-    <h1>Bienvenidos/as a Escape Pirata</h1>
+    <h1>Bienvenido/a a Escape Pirata</h1>
     <p>Aventurate a zarpar en esta nueva sala de escape con temática pirata. Resolve acertijos, jugá juegos y ¡escapá de la Capitana Morgana! ¿Estás/an listos para emprender esta épica aventura?</p>
     <p id="opcionesIndex">
         <a href='@Url.Action("Comenzar")'>Comenzar</a>
