Cambiar titulo de View Derrota y revisar textos alternativos de imágenes

--- a/Views/Home/Derrota.cshtml
+++ b/Views/Home/Derrota.cshtml
@@ -3,7 +3,7 @@
 }
 
 <div class="centrado">
-    <h1>Game Over</h1>
+    <h1>Derrotado</h1>
     <p>Te quedaste sin tiempo. Solo esperás lo mejor.</p>
-    <img src="~/img/derrota.png" alt="Game Over">
+    <img src="~/img/derrota.png" alt="Persona triste">
 </div>
