--- a/Views/Home/Habitacion4.cshtml
+++ b/Views/Home/Habitacion4.cshtml
@@ -10,6 +10,6 @@
 <p>Nota: Las dos espadas cruzadas no es la letra B, fijate un icono que sea parecido.</p>
 
 <div class="imagenInteractiva">
-    <img src="~/img/h4-sotano.jpg" alt="Sótano">
+    <img src="~/img/h4-sotano.jpg" alt="Sótano con pistas">
     <img id="tablaDeCodigos" src="~/img/h4-tabla_de_codigos.jpg" alt="Tabla de códigos">
 </div>
