--- a/Views/Home/Tutorial.cshtml
+++ b/Views/Home/Tutorial.cshtml
@@ -11,5 +11,5 @@
         <li>Esperemos que les guste la sala y empezemos a jugar.</li>
         <li>Tenés 1:30h para completar la sala. ¡Buena suerte!</li>
     </ol>
-    <img src="~/img/tutorial.png" alt="Imagen de tutorial">
+    <img src="~/img/tutorial.png" alt="Imagen de tutorial con numeros que son referenciados en la lista">
 </div>
