Poner mensaje NoScript en contador

--- a/Views/Shared/_Habitacion.cshtml
+++ b/Views/Shared/_Habitacion.cshtml
@@ -21,6 +21,8 @@
     <p>No escribir tildes.</p>
 </form>
 
-<p id="contador" class="centrado"></p>
+<p id="contador" class="centrado">
+    <noscript>Para ver el contador, necesitás Javascript.</noscript>
+</p>
 
 <script src="~/js/Contador.js" asp-append-version="true"></script>
