Cambiar lugar de los links entre Index y Layout general

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -13,8 +13,8 @@
         <a href='@Url.Action("")'><img src="~/img/logo.jpeg"></a>
         <nav>
             <ul>
-                <li><a href='@Url.Action("Tutorial")'>Tutorial</a></li>
                 <li><a href='@Url.Action("Comenzar")'>Comenzar</a></li>
+                <li><a href='@Url.Action("Creditos")'>Créditos</a></li>
             </ul>
         </nav>
     </header>
