--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
     <p>Aventurate a zarpar en esta nueva sala de escape con temática pirata. Resolve acertijos, jugá juegos y ¡escapá de la Capitana Morgana! ¿Estás/an listos para emprender esta épica aventura?</p>
     <p id="opcionesIndex">
         <a href='@Url.Action("Comenzar")'>Comenzar</a>
-        <a href='@Url.Action("Creditos")'>Créditos</a>
+        <a href='@Url.Action("Tutorial")'>Tutorial</a>
     </p>
     <div>
         <img src="~/img/index-screenshot1.jpg" alt="Screenshot 1">
