Cubrir todas las letras que deberían estar en cursiva de la habitación 5

--- a/Views/Home/Habitacion5.cshtml
+++ b/Views/Home/Habitacion5.cshtml
@@ -6,8 +6,8 @@
 
 <h1>Fase final</h1>
 <p>Este es el final de tu aventura, ¡estás cerca de tu libertad!</p>
-<p>Aquí, en las pro<i>F</i>undidades olvidadas d<i>E</i>l océano, se esconde e<i>L</i> tesoro más codiciado y custodiado por el espíritu vengativo del capitán y su trIpulación perdida. La atmósfera es opresiva y el eco de sus pasos resonará en las almas de aquellos que osen desafiar la maldición que yace sobre este lugar. </p>
-<p>Caminen con cautela entre los restos de quienes vinieron antes que ustedes, ahora devorados por la avari<i>C</i>ia y el abismo. Las antorchas titIlantes apenas disipan las sombras que se esconden entre los huesos descarnados y las caDenas herrumbrosas que anuncian un destino simil<i>A</i>r para los que fracasen en este último juicio. El cofre, viejo y ominoso, espera impaciente, prometiendo tesoros inimaginables, pero también el precio más alto que un alma pue<i>D</i>e pagar.</p>
+<p>Aquí, en las pro<i>F</i>undidades olvidadas d<i>E</i>l océano, se esconde e<i>L</i> tesoro más codiciado y custodiado por el espíritu vengativo del capitán y su tr<i>I</i>pulación perdida. La atmósfera es opresiva y el eco de sus pasos resonará en las almas de aquellos que osen desafiar la maldición que yace sobre este lugar. </p>
+<p>Caminen con cautela entre los restos de quienes vinieron antes que ustedes, ahora devorados por la avari<i>C</i>ia y el abismo. Las antorchas tit<i>I</i>lantes apenas disipan las sombras que se esconden entre los huesos descarnados y las ca<i>D</i>enas herrumbrosas que anuncian un destino simil<i>A</i>r para los que fracasen en este último juicio. El cofre, viejo y ominoso, espera impaciente, prometiendo tesoros inimaginables, pero también el precio más alto que un alma pue<i>D</i>e pagar.</p>
 <p>Solo aquellos lo suficientemente valientes para enfrentar la verdad oculta en las estrellas y reflejada en el espejo ancestral podrán escapar de la maldición eterna que acecha en la Guarida del Capitán Negro. Que sus decisiones y respuestas no solo decidan su d<i>E</i>stino, sino también el destino de los que vinieron ante<i>S</i> y no encontraron la salida.</p>
 
 <img src="~/img/tesoro.jpg" alt="Tesoro">
