Cambiar de ViewData a ViewBag

--- a/Views/Home/Habitacion1.cshtml
+++ b/Views/Home/Habitacion1.cshtml
@@ -1,7 +1,7 @@
 @{
     Layout = "~/Views/Shared/_Habitacion.cshtml";
-    ViewData["Number"] = 1;
-    ViewData["Title"] = "Bienvenido/a a bordo";
+    ViewBag.Number = 1;
+    ViewBag.Titulo = "Bienvenido/a a bordo";
 }
 
 <h1>Bienvenido/a a bordo</h1>
