--- a/Views/Home/Habitacion2.cshtml
+++ b/Views/Home/Habitacion2.cshtml
@@ -1,7 +1,7 @@
 @{
     Layout = "~/Views/Shared/_Habitacion.cshtml";
-    ViewData["Number"] = 2;
-    ViewData["Title"] = "Camarote";
+    ViewBag.Number = 2;
+    ViewBag.Titulo = "Camarote";
 }
 
 <audio loop autoplay>
