--- a/Views/Home/Habitacion3.cshtml
+++ b/Views/Home/Habitacion3.cshtml
@@ -1,7 +1,7 @@
 @{
     Layout = "~/Views/Shared/_Habitacion.cshtml";
-    ViewData["Number"] = 3;
-    ViewData["Title"] = "Cubierta";
+    ViewBag.Number = 3;
+    ViewBag.Titulo = "Cubierta";
 }
 
 <audio id="audioLoro" loop autoplay>
