--- a/Views/Home/Habitacion5.cshtml
+++ b/Views/Home/Habitacion5.cshtml
@@ -1,7 +1,7 @@
 @{
     Layout = "~/Views/Shared/_Habitacion.cshtml";
-    ViewData["Number"] = 5;
-    ViewData["Title"] = "Fase final: el enigma";
+    ViewBag.Number = 5;
+    ViewBag.Titulo = "Fase final: el enigma";
 }
 
 <h1>Fase final</h1>
