--- a/Views/Home/Victoria.cshtml
+++ b/Views/Home/Victoria.cshtml
@@ -1,11 +1,11 @@
 @{
-    ViewData["Title"] = "VICTORIA";
+    ViewBag.Titulo = "VICTORIA";
 }
 
 <div class="centrado">
     <h1>Felicidades</h1>
     
-    <p>Intentos fallidos: @ViewData["IntentosFallidos"]</p>
+    <p>Intentos fallidos: @ViewBag.IntentosFallidos</p>
 
     <p>No solo has obtenido un tesoro, si no que has logrado okupar este barco pirata que aparentemente solo estaba siendo ocupado por este loro, quien se habia hecho pasar por la Capitana Morgana porque habeís intentado ahondar sin permiso el barco e intentaba impresionarla atrapandolos.</p>
     <p>Finalmente, hacen las pases con el loro y roban el botín. Como concecuencia, ¡ganaste este barco pirata!</p>
