--- a/Views/Home/Habitacion4.cshtml
+++ b/Views/Home/Habitacion4.cshtml
@@ -1,7 +1,7 @@
 @{
     Layout = "~/Views/Shared/_Habitacion.cshtml";
-    ViewData["Number"] = 4;
-    ViewData["Title"] = "Sótano";
+    ViewBag.Number = 4;
+    ViewBag.Titulo = "Sótano";
 }
 
 <h1>Sótano</h1>
