--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Escape Pirata</title>
+    <title>@ViewBag.Titulo - Escape Pirata</title>
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
 </head>
 
