Achicar link de la imagen del header y min-height del main

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -38,7 +38,7 @@ img {
 }
 main {
   padding: 2% 15%;
-  min-height: 80.5vh;
+  min-height: 79vh;
   clear: both;
 }
 p {
@@ -80,7 +80,7 @@ header * {
 }
 header a[href="/"] {
   width: 60px;
-  height: auto;
+  height: 60px;
 }
 header a[href="/"], nav li {
   margin-right: 5px;
