Añadir botón de reiniciado en View derrota

--- a/Views/Home/Derrota.cshtml
+++ b/Views/Home/Derrota.cshtml
@@ -5,5 +5,9 @@
 <div class="centrado">
     <h1>Derrotado</h1>
     <p>Te quedaste sin tiempo. Solo esperás lo mejor.</p>
+
+    <p>Intentos fallidos: @ViewBag.IntentosFallidos</p>
+    <a class="button" href="@Url.Action("Comenzar")">🔄 Volver a intentar</a>
+    
     <img src="~/img/derrota.png" alt="Persona triste">
 </div>
