--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
     <h1>Bienvenido/a a Escape Pirata</h1>
     <p>Aventurate a zarpar en esta nueva sala de escape con temática pirata. Resolve acertijos, jugá juegos y ¡escapá de la Capitana Morgana! ¿Estás/an listos para emprender esta épica aventura?</p>
     <p id="opcionesIndex">
-        <a href='@Url.Action("Comenzar")'>Comenzar</a>
+        <a class="button" href='@Url.Action("Comenzar")'>Comenzar</a>
         <a href='@Url.Action("Tutorial")'>Tutorial</a>
     </p>
     <div>
