--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <header class="clearfix">
+    <header>
         <a href='@Url.Action("")'><img src="~/img/logo.jpeg"></a>
         <p id="contador">
             <noscript>Para ver el contador, necesitás Javascript.</noscript>
