Renombrar 'Volver a intentar' a 'Reintentar' y añadir botones a View Victoria

--- a/Views/Home/Derrota.cshtml
+++ b/Views/Home/Derrota.cshtml
@@ -7,7 +7,7 @@
     <p>Te quedaste sin tiempo. Solo esperás lo mejor.</p>
 
     <p>Intentos fallidos: @ViewBag.IntentosFallidos</p>
-    <a class="boton" href="@Url.Action("Comenzar")">🔄 Volver a intentar</a>
+    <a class="boton" href="@Url.Action("Comenzar")">🔄 Reintentar</a>
     
     <img src="~/img/derrota.png" alt="Persona triste">
 </div>
