--- a/Views/Home/Victoria.cshtml
+++ b/Views/Home/Victoria.cshtml
@@ -8,6 +8,10 @@
     <p>Finalmente, hacen las pases con el loro y roban el botín. Como concecuencia, ¡ganaste este barco pirata!</p>
     
     <p>Intentos fallidos: @ViewBag.IntentosFallidos</p>
+    <div>
+        <a class="boton" href="@Url.Action("Comenzar")">🔄 Reintentar</a>
+        <a class="boton" href="@Url.Action("Creditos")">👥 Créditos</a>
+    </div>
 
     <div class="imagenInteractiva">
         <img src="~/img/victoria-barco.jpg" alt="Barco">
