--- a/Views/Home/Tutorial.cshtml
+++ b/Views/Home/Tutorial.cshtml
@@ -6,10 +6,12 @@
     <h1>Presta atencion al siguiente tutorial</h1>
     <ol>
         <li>Para comenzar entra en el botón de arriba donde dice comenzar, para dirigirte a la sala comienzo.</li>
+        <li>Para regresar a la home/menú hacé click en el logo.</li>
         <li>Pasa de sala en sala hasta llegar al final. Siempre abajo de cada página tenes una casilla para colocar la respuesta que creas que es correcta. En el caso de que sea incorrecta no va  a pasar a la siguiente. Caso contrario, si es correcta, va a pasar de sala.</li>
         <li>Todas las salas tienen pistas complejas, si buscas encuentras y todas tienen alguna respuesta.</li>
         <li>Esperemos que les guste la sala y empezemos a jugar.</li>
         <li>Tenés 1:30h para completar la sala. ¡Buena suerte!</li>
     </ol>
-    <img src="~/img/tutorial.png" alt="Imagen de tutorial con numeros que son referenciados en la lista">
+    <img src="~/img/tutorial1.png" alt="Imagen 1 de tutorial con números que son referenciados en la lista">
+    <img src="~/img/tutorial2.png" alt="Imagen 2 de tutorial con números que son referenciados en la lista">
 </div>
