Actualizar tutorial (finalizado)

--- a/Views/Home/Tutorial.cshtml
+++ b/Views/Home/Tutorial.cshtml
@@ -13,5 +13,5 @@
         <li>Tenés 1:30h para completar la sala. ¡Buena suerte!</li>
     </ol>
     <img src="~/img/tutorial1.png" alt="Imagen 1 de tutorial con números que son referenciados en la lista">
-    <img src="~/img/tutorial2.png" alt="Imagen 2 de tutorial con números que son referenciados en la lista">
+    <img src="~/img/tutorial2.png" alt="Imagen 2 de tutorial">
 </div>
